fix overflow

--- a/src/styles/components/pairing.scss
+++ b/src/styles/components/pairing.scss
@@ -66,4 +66,5 @@
     cursor: move;
     padding: 15px;
     width: 100%;
+    overflow: hidden;
 }
